<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_row_items"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_card_search"
    android:layout_margin="5dp"
    android:padding="5dp"
    >

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/round_card_search_body"
        android:padding="8dp"
        android:text="@string/text_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/tv_icon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:contentDescription="@string/twitter_icon"
        android:src="@drawable/ic_twitter_logo_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_created_at"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:textSize="10sp"
        android:text="@string/created_at"
        android:gravity="right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_text" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="60dp"
        android:text="@string/twitter_api"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_screen_name"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textSize="10sp"
        android:gravity="center_vertical"
        android:layout_marginStart="5dp"
        android:text="@string/twitterapi"
        android:textColor="@android:color/tertiary_text_light"
        app:layout_constraintStart_toEndOf="@+id/tv_name"
        app:layout_constraintTop_toTopOf="@id/tv_name"
        />



    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/profile_imagw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <TextView
        android:id="@+id/tv_line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_created_at" />

    <TextView
        android:id="@+id/tv_set_Likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:gravity="center|start"
        android:text="@string/likes"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/iv_upload"
        app:layout_constraintTop_toBottomOf="@+id/tv_line3" />

    <ImageView
        android:id="@+id/iv_reply"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/reply_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_upload"
        app:srcCompat="@drawable/ic_retwet" />

    <ImageView
        android:id="@+id/iv_upload"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/upload_icon"
        app:layout_constraintEnd_toStartOf="@+id/iv_reply"
        app:layout_constraintTop_toBottomOf="@+id/tv_line3"
        app:srcCompat="@drawable/upload" />

    <TextView
        android:id="@+id/tv_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:text="@string/_203"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_set_Likes"
        app:layout_constraintEnd_toStartOf="@+id/tv_set_Likes" />

    <TextView
        android:id="@+id/tv_set_Retweets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/retweets"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_likes"
        app:layout_constraintEnd_toStartOf="@+id/tv_likes" />

    <TextView
        android:id="@+id/tv_retweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/_45"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_set_Retweets"
        app:layout_constraintEnd_toStartOf="@+id/tv_set_Retweets" />

</androidx.constraintlayout.widget.ConstraintLayout>